<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_ros2_driver</name>
  <version>0.0.1</version>
  <description>YDLIDAR T-mini plus ROS2 Driver</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>